--- a/index.html
+++ b/index.html
@@ -7,6 +7,56 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
+
+    <meta charset="UTF-8" />
+    <!-- Assicurati che il percorso dell'icona sia corretto -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Informazioni SEO -->
+    <title>React Travel Planner - Pianifica il tuo prossimo viaggio</title>
+    <meta
+      name="description"
+      content="Pianifica itinerari, gestisci le spese di gruppo e tieni tutto sotto controllo in un unico posto. Semplice, intuitivo e sempre con te."
+    />
+    <meta
+      name="keywords"
+      content="travel planner, pianificatore viaggi, itinerario, spese di gruppo, checklist viaggio, react, vite"
+    />
+    <meta name="author" content="React Travel Planner" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://travelplanner-online.netlify.app/"
+    />
+    <meta
+      property="og:title"
+      content="React Travel Planner - Pianifica il tuo prossimo viaggio"
+    />
+    <meta
+      property="og:description"
+      content="Pianifica itinerari, gestisci le spese di gruppo e tieni tutto sotto controllo in un unico posto."
+    />
+    <meta property="og:image" content="preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://travelplanner-online.netlify.app/"
+    />
+    <meta
+      property="twitter:title"
+      content="React Travel Planner - Pianifica il tuo prossimo viaggio"
+    />
+    <meta
+      property="twitter:description"
+      content="Pianifica itinerari, gestisci le spese di gruppo e tieni tutto sotto controllo in un unico posto."
+    />
+    <meta property="twitter:image" content="preview.png" />
+
     <title>React Travel Planner</title>
   </head>
   <body>
